--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.2",
     "nodemon": "^3.0.2",
     "request": "^2.88.2",
+    "socket.io": "^4.8.0",
     "winston": "^3.14.2"
   },
   "scripts": {
