--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^3.0.2",
     "request": "^2.88.2",
     "socket.io": "^4.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.2"
   },
   "scripts": {
