--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "socket.io": "^4.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0",
     "winston": "^3.14.2"
   },
   "scripts": {
