feat: add ios launch support

--- a/echo/android/.gitignore
+++ b/echo/android/.gitignore
@@ -11,3 +11,7 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+.flutter-plugins
+.flutter-plugins-dependencies
+.dart_tool/
