--- a/echo/pubspec.yaml
+++ b/echo/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   jwt_decoder: ^2.0.1
   provider: ^6.0.5
   ionicons: ^0.2.2
+  video_player: ^2.9.2
+  chewie: ^1.8.5
 
 dev_dependencies:
   flutter_test:
