--- a/echo/pubspec.yaml
+++ b/echo/pubspec.yaml
@@ -1,10 +1,10 @@
 name: echo
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -23,8 +23,24 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.14.1
 
 flutter:
   assets:
     - assets/images/
   uses-material-design: true
+
+flutter_launcher_icons:
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  android:
+    adaptive_icon_background: "#FFFFFF"
+    adaptive_icon_foreground: "assets/images/app_icon.png"
+  web:
+    generate: true
+  windows:
+    generate: true
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
