--- a/echo/pubspec.yaml
+++ b/echo/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   ionicons: ^0.2.2
   video_player: ^2.9.2
   chewie: ^1.8.5
+  socket_io_client: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
