--- a/videoService/package.json
+++ b/videoService/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
     "classnames": "^2.5.1",
