--- a/echo/pubspec.yaml
+++ b/echo/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   video_player: ^2.9.2
   chewie: ^1.8.5
   socket_io_client: ^3.0.0
+  go_router: ^14.3.0
+  collection: ^1.18.0
 
 
 dev_dependencies:
