--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build docker image
+        working-directory: echo
         run: docker build -t echo-web .
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
