fix: change actor to repository owner

--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -19,9 +19,9 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push image to GitHub Container Registry
         run: | 
-          docker tag echo-web ghcr.io/${{ github.actor }}/echo-web:latest 
-          docker push ghcr.io/${{ github.actor }}/echo-web:latest
+          docker tag echo-web ghcr.io/${{ github.repository_owner }}/echo-web:latest 
+          docker push ghcr.io/${{ github.repository_owner }}/echo-web:latest
