--- a/.github/workflows/build-web.yml
+++ b/.github/workflows/build-web.yml
@@ -23,5 +23,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Push image to GitHub Container Registry
         run: | 
-          docker tag echo-web ghcr.io/${{ github.repository_owner }}/echo-web:latest 
-          docker push ghcr.io/${{ github.repository_owner }}/echo-web:latest
+          OWNER=$(echo 'print("${{ github.repository_owner }}".lower())' | python3 -)
+          docker tag echo-web ghcr.io/$OWNER/echo-web:latest 
+          docker push ghcr.io/$OWNER/echo-web:latest
