--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "db-migrate-mysql": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
