--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.14",
     "db-migrate-mysql": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
@@ -21,6 +22,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "migrate": "db-migrate up -e default",
+    "migrate:local": "db-migrate up -e local"
   }
 }
