--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.797.0",
+    "@aws-sdk/s3-request-presigner": "^3.797.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
@@ -10,6 +12,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.2",
     "nodemon": "^3.0.2",
