--- a/echo/pubspec.yaml
+++ b/echo/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   socket_io_client: ^3.0.0
   go_router: ^14.3.0
   collection: ^1.18.0
+  file_picker: ^10.1.2
+  mime: ^2.0.0
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
