--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "@aws-sdk/s3-request-presigner": "^3.797.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "bullmq": "^5.52.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.14",
@@ -11,6 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
@@ -25,6 +27,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "start:worker": "node worker.js",
     "server": "nodemon server.js",
     "migrate": "npx db-migrate up -e default",
     "migrate:local": "npx db-migrate up -e local"
