--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.797.0",
     "@aws-sdk/s3-request-presigner": "^3.797.0",
+    "@yandex-cloud/nodejs-sdk": "^2.8.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bullmq": "^5.52.0",
