--- a/server/Dockerfile.worker
+++ b/server/Dockerfile.worker
@@ -1,8 +1,13 @@
 FROM node:20-alpine
 WORKDIR /app
 COPY package.json package-lock.json /app/
+
 # Install dependencies
 RUN npm install
+
+# Install ffmpeg
+RUN apk add  --no-cache ffmpeg
+
 COPY . /app
 RUN chmod +x /app/entrypoint.worker.sh
 ENTRYPOINT ["/app/entrypoint.worker.sh"]
