--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "db-migrate-mysql": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
     "http": "^0.0.1-security",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
