--- a/echo/pubspec.yaml
+++ b/echo/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   file_picker: ^10.1.2
   mime: ^2.0.0
   http_parser: ^4.1.2
+  appmetrica_plugin: ^3.2.0
 
 dev_dependencies:
   flutter_test:
